--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10.10.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5"
